updated base html

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,8 +6,8 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
     <!-- <meta name="theme-color" content="#000000" /> -->
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="GutHub"
+      content="A Drink Mixing Application"
     />
     <link rel="apple-touch-icon" href="https://img.icons8.com/dusk/64/000000/the-toast.png" />
     <title>GutHub</title>
