--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" href="https://img.icons8.com/dusk/64/000000/the-toast.png" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
     <!-- <meta name="theme-color" content="#000000" /> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@1,700&display=swap" rel="stylesheet">
     <meta
       name="GutHub"
       content="A Drink Mixing Application"
